--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bootstrap5 Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/697c2c5344.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/20b0b20211.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-light">
     <!--navbar start-->
@@ -177,7 +177,7 @@
                     </div>
                     <div class="contact-item d-flex mb-3">
                         <div class="icon fs-4 text-primary">
-                            <i class="fas fa-briefcase"></i>
+                            <i class="fa-solid fa-location-dot"></i>
                         </div>
                         <div class="text ms-3">
                             <h3 class="fs-5">Work</h3>
